# goes_api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION.md  GOES-R-VIZ.py  GOES_API  MANIFEST.in  README.md  TODO_dev.py  TODOs.py  check_download_past.py  docs.py  environment.yml  ex_netcd.py  io_benchmarking.py  kerchunk.py  kerchunk_goes.py  kerchunk_notes.py  lcov.info  pyproject.toml  satpy_ffspec_usage.py  script_GOES.py  script_GOES_queries.py  setup.py
COMP/: SATPY_ABI_READER.py  SATPY_ABI_READER_MODIF.py  SATPY_COMPOSITES_CONFIG_LOADER.py  SATPY_COMPOSITES_CONFIG_LOADER_MODIF.py  SATPY_READER_UTILS.py  SATPY_READER_UTILS_MODIF.py
TODO_GOES/: Animation_GOES-R_Mesoscale.py  Mosaic_GOES-R_Channels.py  download_GOES-R.py  download_Himawari.py  google.cloud_api.py
ci/: environment_latest.yaml
data/ABI_Pixel_TimeOffset/: goes-16_C_M3_0.5km.nc  goes-16_C_M6_1km.nc  goes-16_F_M3_1000.nc  goes-16_F_M3_2km.nc  goes-16_F_M4_0.5km.nc  goes-16_F_M6_0.5km.nc  goes-16_F_M6_1000.nc  goes-16_F_M6_1km.nc  goes-16_F_M6_2km.nc  goes-16_M_M3_1km.nc  goes-16_M_M6_2km.nc  goes-17_C_M6_2000.nc  goes-17_C_M6_2km.nc  goes-17_C_M6_500.nc  goes-17_F_M3_0.5km.nc  goes-17_F_M3_1km.nc  goes-17_F_M4_1km.nc  goes-17_F_M4_2000.nc  goes-17_F_M4_2km.nc  goes-17_F_M6_0.5km.nc  goes-17_F_M6_1km.nc  goes-17_F_M6_2000.nc  goes-17_F_M6_2km.nc  goes-17_M_M3_0.5km.nc  goes-17_M_M6_500.nc
dev/: BUG_gcsfs.py  NOTES_download.py  NOTES_plotting.py  Z_TODO_dev.py  Z_TODOs.py  __init__.py  debug_args.py  dev_download_parallel.py  dev_download_past.py  dev_kerchunk_parallel.py  dev_m4_scan_list.py  dev_scan_time.py  dev_scan_time_carr.py  dev_scan_time_code.py  dev_scan_time_inferred_from_DQF.py  dev_time_filtering.py  imports.py  notes_docs_packaging.py
dev/TODO_GOES/: GNC-A Blog - GOES-R-Level-2-Products.py  ex_crop_remap_around_moving_center_coords.py  ex_satpy_utils.py  ex_siphon_thredds_goes_access.py
docs/: ABI_SCAN_MODES.md  ATMOSPHERIC_PRODUCTS.md  DOCUMENTATION.md
goes_api/: __init__.py  abi_area.py  abi_pixel_time.py  abi_utils.py  alias.py  checks.py  configs.py  download.py  explore.py  filter.py  info.py  io.py  kerchunk.py  listing.py  operations.py  query.py  search.py  setup.py
goes_api/data/ABI_Pixel_TimeOffset/: goes-16_F_M4_1000.nc  goes-16_F_M6_2000.nc  goes-17_C_M6_1000.nc  goes-17_F_M3_2000.nc  goes-17_F_M6_1000.nc  goes-17_M_M6_1000.nc  goes-17_M_M6_2000.nc
goes_api/scripts/: compute_ABI_pixel_time_offset.py
goes_api/tests/: test_io.py
goes_api/utils/: time.py  timing.py
tutorials/: 00_download_and_find_files.py  01_download_utility.py  01_find_utility.py  02_explore_documentation.py  02_find_utility.py  02_query_fpaths.py  03_explore_documentation.py  03_read_cloud_bucket_data.py  03_read_cloud_bucket_data_with_satpy.py  03_read_cloud_data.py  04_kerchunk_dataset.py  05_mesoscale_animation_with_satpy.py  06_mosaic_ABI_bands_with_satpy.py  GNC-A Blog - GOES-R-Level-2-Products.py  ex_netcdf.py
tutorials/Others/: ABI_fixed_grid_area.py  ABI_fixed_grid_notes.py  ABI_pixel_scan_time.py  ABI_pixel_scan_time_with_satpy.py  ABI_pixel_time.py  ex_ACHA.py  ex_ACHT.py  ex_ACM.py  ex_ACTP.py  ex_COD.py  ex_CPS.py  ex_CTP.py  ex_DSI.py  ex_LVMP.py  ex_LVTP.py  ex_RRQPE.py  ex_TPW.py  plot_ABI_with_netCDF.py  plot_ABI_with_xarray.py  plot_SUVI_with_xarray.py  read_GLM_with_xarray.py
