# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goes_api"
description = "Python API for for I/O of GOES-16/17 satellite data on local and cloud storage."
readme = "README.md"
authors = [
	{ name = "Gionata Ghiggi", email = "gionata.ghiggi@epfl.ch" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: Unix",
    "Operating System :: Microsoft",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
        "GOES-16",
        "GOES-17",
        "ABI",
        "GLM",
        "satellite",
        "weather",
        "meteorology",
        "forecasting",
        "EWS",
    ]
dependencies = [
    "numpy",
    "pandas", 
    "tqdm",
    "trollsift",
    "fsspec",
    "s3fs",
    "gcsfs",
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.optional-dependencies]
full = ["satpy",
	"xarray",
	"netcdf4",
 	"kerchunk",
	"dask",
	"ujson"]
dev = ["pre-commit", "black", "ruff",
       "pytest", "pytest-cov", 
       "pip-tools", "bumpver", "twine",
       "setuptools>=61.0.0", "wheel",
       "sphinx", "sphinx-gallery", "nbsphinx"]
doc = ["sphinx", "sphinx-gallery", "nbsphinx"] # sphinx-rtd-theme numpydoc pandoc
tests = ["pre-commit", "pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/ghiggi/goes_api"
Source = "https://github.com/ghiggi/goes_api"
Tracker = "https://github.com/ghiggi/goes_api/issues"
Documentation = "https://goes_api.readthedocs.io"
changelog = "https://github.com/ghigg/goes_api/CHANGELOG.md"

[tool.setuptools_scm]
write_to = "goes_api/_version.py"

[tool.setuptools]
license-files = ["LICENSE"]
packages = ["goes_api"] # explicitly list the packages in modules

# To customize, remove packages and use instead [tool.setuptools.packages.find]

# [tool.setuptools.packages.find]
# where = ["goes_api"]
# include = ["io", "..."]

#  [project.scripts]
#  download_daily_gpm_data="gpm_api.scripts.download_daily_gpm_data:download_daily_gpm_data"
#  download_monthly_gpm_data="gpm_api.scripts.download_monthly_gpm_data:download_monthly_gpm_data"

[tool.isort]
profile = "black"
skip_gitignore = true
multi_line_output = 3
line_length = 100
skip = [".tox", ".venv", "build", "dist"]

[tool.black]
line-length = 100
# skip-string-normalization = true
target-version = [
    "py37",
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.pylint]
    [tool.pylint.main]
    extension-pkg-whitelist = [
        "numpy",
        "scipy",
    ]
    ignore = "_version.py"
    load-plugins = [
        "pylint.extensions.no_self_use",
    ]

    [tool.pylint.message_control]
    disable = [
        "R0801",
    ]

    [tool.pylint.reports]
    output-format = "colorized"

    [tool.pylint.design]
    max-args = 20
    max-locals = 50
    max-branches = 30
    max-statements = 80
    max-attributes = 25
    max-public-methods = 75

[tool.coverage]
    [tool.coverage.run]
    source = ["goes_api"]
    omit = [
        "*dev*",
        "*docs*",
        "*tutorials*",
        "*tests*",
    ]

    [tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "def __repr__",
        "def __str__",
    ]







 
   

 
